@startuml

title __COORDINATES's Class Diagram__\n

  namespace com.whu.gnss.gnsslogger {
    namespace coordinates {
      class com.whu.gnss.gnsslogger.coordinates.Coordinates {
          {static} - STREAM_V : int
          - ecef : SimpleMatrix
          - enu : SimpleMatrix
          - geod : SimpleMatrix
          + clone()
          + cloneInto()
          + computeECEF()
          + computeGeodetic()
          + computeLocal()
          + computeLocalV2()
          {static} + deltaGeodeticToDeltaMeters()
          + getE()
          + getGeodeticHeight()
          + getGeodeticLatitude()
          + getGeodeticLongitude()
          + getN()
          + getRefTime()
          + getU()
          + getX()
          + getY()
          + getZ()
          {static} + globalENUInstance()
          {static} + globalGeodInstance()
          {static} + globalXYZInstance()
          + isValidXYZ()
          + minusXYZ()
          {static} + rotationMatrix()
          + setENU()
          + setGeod()
          + setPlusXYZ()
          + setRefTime()
          + setSMMultXYZ()
          + setXYZ()
          + toString()
          # Coordinates()
      }
    }
  }
  

  namespace com.whu.gnss.gnsslogger {
    namespace coordinates {
      class com.whu.gnss.gnsslogger.coordinates.SatellitePosition {
          {static} + UnhealthySat : SatellitePosition
          - maneuver : boolean
          - predicted : boolean
          - satID : int
          - satType : char
          - satelliteClockError : double
          - speed : SimpleMatrix
          - unixTime : long
          + SatellitePosition()
          + clone()
          + getSatID()
          + getSatType()
          + getSatelliteClockError()
          + getSpeed()
          + getUtcTime()
          + isManeuver()
          + isPredicted()
          + setManeuver()
          + setPredicted()
          + setSatID()
          + setSatType()
          + setSatelliteClockError()
          + setSpeed()
          + toString()
      }
    }
  }
  

  com.whu.gnss.gnsslogger.coordinates.Coordinates o-- com.whu.gnss.gnsslogger.constellations.Time : refTime
  com.whu.gnss.gnsslogger.coordinates.SatellitePosition -up-|> com.whu.gnss.gnsslogger.coordinates.Coordinates


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
